{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 137,
  "lineage": "6af41683-1177-aa2d-11a5-8350725a44d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:security-group/sg-08880cca57e59a2cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-08880cca57e59a2cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "digital_account_rds",
            "name_prefix": "",
            "owner_id": "279729537895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "digital_account_rds"
            },
            "tags_all": {
              "Name": "digital_account_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:network-acl/acl-085a8b4b9590a397c",
            "default_network_acl_id": "acl-085a8b4b9590a397c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-085a8b4b9590a397c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "279729537895",
            "subnet_ids": [
              "subnet-039761df162994860",
              "subnet-0422ccae1b40b58b4",
              "subnet-04aca96e9a20bc44c",
              "subnet-05b39174da62e59f9",
              "subnet-09bcf6283ff762e92"
            ],
            "tags": {
              "Name": "digital_account_vpc-default"
            },
            "tags_all": {
              "Name": "digital_account_vpc-default"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:route-table/rtb-0f90284c725f0fa7b",
            "default_route_table_id": "rtb-0f90284c725f0fa7b",
            "id": "rtb-0f90284c725f0fa7b",
            "owner_id": "279729537895",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "digital_account_vpc-default"
            },
            "tags_all": {
              "Name": "digital_account_vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:security-group/sg-0134dc40b5d69c48e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0134dc40b5d69c48e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "279729537895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "digital_account_vpc-default"
            },
            "tags_all": {
              "Name": "digital_account_vpc-default"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:internet-gateway/igw-07be80855dbebef5e",
            "id": "igw-07be80855dbebef5e",
            "owner_id": "279729537895",
            "tags": {
              "Name": "digital_account_vpc"
            },
            "tags_all": {
              "Name": "digital_account_vpc"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07be80855dbebef5e",
            "id": "r-rtb-04206bb58d0cabaa21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04206bb58d0cabaa2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_internet_gateway.this",
            "module.rds_vpc.aws_route_table.public",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:route-table/rtb-0098bf20808b9029b",
            "id": "rtb-0098bf20808b9029b",
            "owner_id": "279729537895",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:route-table/rtb-0dcee0d5cce803919",
            "id": "rtb-0dcee0d5cce803919",
            "owner_id": "279729537895",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:route-table/rtb-08e11f9f717fdf98e",
            "id": "rtb-08e11f9f717fdf98e",
            "owner_id": "279729537895",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2c"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:route-table/rtb-099b825c6ec4c9bb3",
            "id": "rtb-099b825c6ec4c9bb3",
            "owner_id": "279729537895",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:route-table/rtb-04206bb58d0cabaa2",
            "id": "rtb-04206bb58d0cabaa2",
            "owner_id": "279729537895",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "digital_account_vpc-public"
            },
            "tags_all": {
              "Name": "digital_account_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a5c757edc8cd59",
            "route_table_id": "rtb-0098bf20808b9029b",
            "subnet_id": "subnet-0422ccae1b40b58b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_route_table.private",
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04359d057848c6be2",
            "route_table_id": "rtb-0dcee0d5cce803919",
            "subnet_id": "subnet-04aca96e9a20bc44c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_route_table.private",
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048600f317c4ad4c2",
            "route_table_id": "rtb-08e11f9f717fdf98e",
            "subnet_id": "subnet-043e12dda617f73fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_route_table.private",
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0156d71374fc79da4",
            "route_table_id": "rtb-099b825c6ec4c9bb3",
            "subnet_id": "subnet-09bcf6283ff762e92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_route_table.private",
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c00a641fca0226e",
            "route_table_id": "rtb-04206bb58d0cabaa2",
            "subnet_id": "subnet-039761df162994860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_route_table.public",
            "module.rds_vpc.aws_subnet.public",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7c2a147cdf25b52",
            "route_table_id": "rtb-04206bb58d0cabaa2",
            "subnet_id": "subnet-05b39174da62e59f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_route_table.public",
            "module.rds_vpc.aws_subnet.public",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:subnet/subnet-0422ccae1b40b58b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422ccae1b40b58b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279729537895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:subnet/subnet-04aca96e9a20bc44c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aca96e9a20bc44c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279729537895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:subnet/subnet-043e12dda617f73fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043e12dda617f73fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279729537895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2c"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2c"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:subnet/subnet-09bcf6283ff762e92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcf6283ff762e92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279729537895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "digital_account_vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:subnet/subnet-039761df162994860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039761df162994860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279729537895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digital_account_vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "digital_account_vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:subnet/subnet-05b39174da62e59f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b39174da62e59f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279729537895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digital_account_vpc-public-us-east-2b"
            },
            "tags_all": {
              "Name": "digital_account_vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-09df0ab3d6d0faa18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.rds_vpc.aws_vpc.this",
            "module.rds_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279729537895:vpc/vpc-09df0ab3d6d0faa18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085a8b4b9590a397c",
            "default_route_table_id": "rtb-0f90284c725f0fa7b",
            "default_security_group_id": "sg-0134dc40b5d69c48e",
            "dhcp_options_id": "dopt-00d7830ef304b3a9a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09df0ab3d6d0faa18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f90284c725f0fa7b",
            "owner_id": "279729537895",
            "tags": {
              "Name": "digital_account_vpc"
            },
            "tags_all": {
              "Name": "digital_account_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}